--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -348,7 +348,7 @@
     <ClCompile Include="Objects\MouseTrailObject.cpp" />
     <ClCompile Include="Objects\PatternControlObject.cpp" />
     <ClCompile Include="Objects\SelectScene\SelectSceneBGI.cpp" />
-    <ClCompile Include="Objects\SliceObject.cpp" />
+    <ClCompile Include="Objects\SliceObject\SliceableObject.cpp" />
     <ClCompile Include="Objects\Stage\NodeObject.cpp" />
     <ClCompile Include="Objects\Stage\StageBGI.cpp" />
     <ClCompile Include="Objects\TestObject.cpp" />
@@ -374,6 +374,8 @@
     <ClCompile Include="Scripts\LogicManager\AttackPatternManager.cpp" />
     <ClCompile Include="Scripts\LogicManager\BettleManager.cpp" />
     <ClCompile Include="Objects\TitleScene\TitleNodeManager.cpp" />
+    <ClCompile Include="Objects\MenuScene\StageSelectManager.cpp" />
+    <ClCompile Include="Objects\SliceObject\SlicedObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
@@ -384,7 +386,7 @@
     <ClInclude Include="Objects\MouseTrailObject.h" />
     <ClInclude Include="Objects\PatternControlObject.h" />
     <ClInclude Include="Objects\SelectScene\SelectSceneBGI.h" />
-    <ClInclude Include="Objects\SliceObject.h" />
+    <ClInclude Include="Objects\SliceObject\SliceableObject.h" />
     <ClInclude Include="Objects\Stage\NodeObject.h" />
     <ClInclude Include="Objects\Stage\StageBGI.h" />
     <ClInclude Include="Objects\TestObject.h" />
@@ -411,6 +413,8 @@
     <ClInclude Include="Scripts\LogicManager\BettleManager.h" />
     <ClInclude Include="Scripts\SceneCore.h" />
     <ClInclude Include="Objects\TitleScene\TitleNodeManager.h" />
+    <ClInclude Include="Objects\MenuScene\StageSelectManager.h" />
+    <ClInclude Include="Objects\SliceObject\SlicedObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
