--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -333,6 +333,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Components\Rendering\AnimatedChainEffect.h" />
     <ClInclude Include="Components\Rendering\ChainDrawerComponent.h" />
     <ClInclude Include="Components\Rendering\PatternDrawerComponent.h" />
     <ClInclude Include="Components\Rendering\AnimationPlayer.h" />
@@ -419,6 +420,7 @@
     <ClInclude Include="Math\Vector2.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Components\Rendering\AnimatedChainEffect.cpp" />
     <ClCompile Include="Components\Rendering\ChainDrawerComponent.cpp" />
     <ClCompile Include="Components\Rendering\PatternDrawerComponent.cpp" />
     <ClCompile Include="Components\Rendering\AnimationPlayer.cpp" />
