slider기능추가, 카메라 흔들림 종류 추가, 이펙트 매니저 기능, 각 인스턴스 추가
1.slider에 각 버튼 layer 설정 함수 추가
2. 카메라 흔들림 종류 3가지 추가
3. 이펙트 매니저에서 이펙트들 카메라 영향안받도록하는 함수 추가(SetUnityValue)
4. 이펙트인스턴스 추가(신규 이펙트및 애니메이션 추가)
5. App 구현예제 추가( 마우스변경 , 시작시 모든 음악 오디오시스템에 등록 하는법)

--- a/WorkSpace/KJH/KJH.vcxproj
+++ b/WorkSpace/KJH/KJH.vcxproj
@@ -335,7 +335,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Script\App\AppEx.cpp" />
     <ClCompile Include="App\SoundApp.cpp" />
+    <ClCompile Include="Script\Camera\CamInstance.cpp" />
     <ClCompile Include="DataStorage\BaseData.cpp" />
     <ClCompile Include="DataStorage\DataClass\AllNodePattenClass.cpp" />
     <ClCompile Include="DataStorage\DataClass\EnemyAtkPattenData.cpp" />
@@ -351,9 +353,14 @@
     <ClCompile Include="Script\MusicScript.cpp" />
     <ClCompile Include="Script\TestObject.cpp" />
     <ClCompile Include="Script\TestObject2.cpp" />
+    <ClCompile Include="Script\Sound\SoundTittle.cpp" />
+    <ClCompile Include="Script\Sound\SoundPlayScene.cpp" />
+    <ClCompile Include="Script\Sound\SoundEnd.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Script\App\AppEx.h" />
     <ClInclude Include="App\SoundApp.h" />
+    <ClInclude Include="Script\Camera\CamInstance.h" />
     <ClInclude Include="DataStorage\BaseData.h" />
     <ClInclude Include="DataStorage\DataClass\AllNodePattenClass.h" />
     <ClInclude Include="DataStorage\DataClass\EnemyAtkPattenData.h" />
@@ -368,6 +375,9 @@
     <ClInclude Include="Script\MusicScript.h" />
     <ClInclude Include="Script\TestObject.h" />
     <ClInclude Include="Script\TestObject2.h" />
+    <ClInclude Include="Script\Sound\SoundTittle.h" />
+    <ClInclude Include="Script\Sound\SoundPlayScene.h" />
+    <ClInclude Include="Script\Sound\SoundEnd.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
