chore - 에니메이티드 체인 이펙트 컴포넌트 - 이펙트 인스턴스 델리게이트로 연결함
정현씨 코드 콘텐츠로 이동시키고
연결함

--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -371,6 +371,10 @@
     <ClCompile Include="Scripts\CsvData\DataClass\EnemyData.cpp" />
     <ClCompile Include="Scripts\CsvData\DataClass\PlayerData.cpp" />
     <ClCompile Include="Scripts\CsvData\DataStorage\CsvDataStorage.cpp" />
+    <ClCompile Include="Scripts\Effect\EffectComponent.cpp" />
+    <ClCompile Include="Scripts\Effect\EffectInstance.cpp" />
+    <ClCompile Include="Scripts\Effect\EffectManager.cpp" />
+    <ClCompile Include="Scripts\Effect\EffectObject.cpp" />
     <ClCompile Include="Scripts\LiveObject\Enemy.cpp" />
     <ClCompile Include="Scripts\LiveObject\LiveObject.cpp" />
     <ClCompile Include="Scripts\LiveObject\Player.cpp" />
@@ -413,6 +417,10 @@
     <ClInclude Include="Scripts\CsvData\DataClass\EnemyData.h" />
     <ClInclude Include="Scripts\CsvData\DataClass\PlayerData.h" />
     <ClInclude Include="Scripts\CsvData\DataStorage\CsvDataStorage.h" />
+    <ClInclude Include="Scripts\Effect\EffectComponent.h" />
+    <ClInclude Include="Scripts\Effect\EffectInstance.h" />
+    <ClInclude Include="Scripts\Effect\EffectManager.h" />
+    <ClInclude Include="Scripts\Effect\EffectObject.h" />
     <ClInclude Include="Scripts\LiveObject\Enemy.h" />
     <ClInclude Include="Scripts\LiveObject\LiveObject.h" />
     <ClInclude Include="Scripts\LiveObject\Player.h" />
