--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -198,7 +198,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y /d /i /s "$(SolutionDir)Resource\*" "$(TargetDir)Resource\</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='KJH|Win32'">
@@ -282,7 +283,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y /d /i /s "$(SolutionDir)Resource\*" "$(TargetDir)Resource\</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='KJH|x64'">
@@ -430,6 +432,7 @@
     <ClInclude Include="Utils\GameTime.h" />
     <ClInclude Include="Utils\Singleton.h" />
     <ClInclude Include="Math\Vector2.h" />
+    <ClInclude Include="Components\Rendering\VignetteEffect.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Components\Rendering\AnimatedChainEffect.cpp" />
@@ -494,6 +497,7 @@
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="Utils\DebugUtility.cpp" />
     <ClCompile Include="Utils\GameTime.cpp" />
+    <ClCompile Include="Components\Rendering\VignetteEffect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
