feat - 타이틀 연출 만드는중
이미지 여러개 겹쳐놓고
트랜스폼 + 알파 + 렉트로 관리할 생각임

--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -363,6 +363,7 @@
     <ClCompile Include="Objects\Common\MouseTrailObject.cpp" />
     <ClCompile Include="Objects\Common\PatternControlObject.cpp" />
     <ClCompile Include="Objects\Scenes\SelectScene\SelectSceneBGI.cpp" />
+    <ClCompile Include="Objects\Scenes\TitleScene\TitleEffectManager.cpp" />
     <ClCompile Include="Objects\SliceObject\SliceableObject.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\NodeObject.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\StageBGI.cpp" />
@@ -409,6 +410,7 @@
     <ClInclude Include="Objects\Common\MouseTrailObject.h" />
     <ClInclude Include="Objects\Common\PatternControlObject.h" />
     <ClInclude Include="Objects\Scenes\SelectScene\SelectSceneBGI.h" />
+    <ClInclude Include="Objects\Scenes\TitleScene\TitleEffectManager.h" />
     <ClInclude Include="Objects\SliceObject\SliceableObject.h" />
     <ClInclude Include="Objects\Scenes\Stage\NodeObject.h" />
     <ClInclude Include="Objects\Scenes\Stage\StageBGI.h" />
