feat - Json으로 불러온 animation clip, spritesheet 반환 함수 추가, 기타 등등
1. json으로 불러온 데이터를 반환하는 함수를 AnimationPlayer에 추가하여 데이터 꺼낼수 있음
2. Slider 조건식 오류 수정
3. 게임에 쓸 Slider 오브젝트 코드 작성

--- a/WorkSpace/KJH/KJH.vcxproj
+++ b/WorkSpace/KJH/KJH.vcxproj
@@ -335,6 +335,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Script\giseSlider\GiseGauge.cpp" />
     <ClCompile Include="Script\App\AppEx.cpp" />
     <ClCompile Include="App\SoundApp.cpp" />
     <ClCompile Include="Script\Camera\CamInstance.cpp" />
@@ -358,6 +359,7 @@
     <ClCompile Include="Script\Sound\SoundEnd.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Script\giseSlider\GiseGauge.h" />
     <ClInclude Include="Script\App\AppEx.h" />
     <ClInclude Include="App\SoundApp.h" />
     <ClInclude Include="Script\Camera\CamInstance.h" />
