공격 빠르게 나오는 버그 수정
 - 공격 빠르게 나오는 버그 수정
 - 플레이어 공격 이미지 3개 중  랜덤하게 나오도록 수정
 - 기세 게이지 배틀 매니저와 연결(게이지를 컴포넌트로 추가함)

--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -397,6 +397,7 @@
     <ClCompile Include="Objects\Scenes\MenuScene\StageSelectManager.cpp" />
     <ClCompile Include="Objects\SliceObject\SlicedObject.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\EscMenu\StageESCPanel.cpp" />
+    <ClCompile Include="Scripts\Slider\GiseGauge.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
@@ -445,6 +446,7 @@
     <ClInclude Include="Objects\Scenes\MenuScene\StageSelectManager.h" />
     <ClInclude Include="Objects\SliceObject\SlicedObject.h" />
     <ClInclude Include="Objects\Scenes\Stage\EscMenu\StageESCPanel.h" />
+    <ClInclude Include="Scripts\Slider\GiseGauge.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
