feat - ChargedSlashManager 제작중
마우스의 위치가 원 범위 안에 있으면 차징

마우스가 원 범위 밖으로 나가서
마우스 좌클릭을 놓는 순간의 위치를 계산해서
방향벡터를 구하고, 그 방향 백터가
의도한 방향과 일치하는지 확인해서
공격 성공여부를 출력하게 만들려고
생각중임
아 배고프다

--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -353,6 +353,7 @@
   <ItemGroup>
     <ClCompile Include="Application\Game.cpp" />
     <ClCompile Include="Application\GameApp.cpp" />
+    <ClCompile Include="Objects\Manager\ChargedSlashManager.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\EscMenu\EscContinueButton.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\EscMenu\EscExitButton.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\EscMenu\EscMuteButton.cpp" />
@@ -401,6 +402,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
+    <ClInclude Include="Objects\Manager\ChargedSlashManager.h" />
     <ClInclude Include="Objects\Scenes\Stage\EscMenu\EscContinueButton.h" />
     <ClInclude Include="Objects\Scenes\Stage\EscMenu\EscExitButton.h" />
     <ClInclude Include="Objects\Scenes\Stage\EscMenu\EscMuteButton.h" />
