feat - 애니메이션 2개 추가
총 10개의 애니메이션 추가
EffectMonoB는 call때 재생시킬 갯수, 회전값 배열(vector, functional으로 담아서 랜덤 난수 함수 던져주는것도 생각중)
Final은 애니메이션 하나라 rotation값 하나만

--- a/WorkSpace/KJH/KJH.vcxproj
+++ b/WorkSpace/KJH/KJH.vcxproj
@@ -335,6 +335,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Script\Effect\Finaleffect.cpp" />
+    <ClCompile Include="Script\Effect\EffectMonoB.cpp" />
     <ClCompile Include="Script\giseSlider\GiseGauge.cpp" />
     <ClCompile Include="Script\App\AppEx.cpp" />
     <ClCompile Include="App\SoundApp.cpp" />
@@ -359,6 +361,8 @@
     <ClCompile Include="Script\Sound\SoundEnd.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Script\Effect\Finaleffect.h" />
+    <ClInclude Include="Script\Effect\EffectMonoB.h" />
     <ClInclude Include="Script\giseSlider\GiseGauge.h" />
     <ClInclude Include="Script\App\AppEx.h" />
     <ClInclude Include="App\SoundApp.h" />
