--- a/WorkSpace/KJH/KJH.vcxproj.filters
+++ b/WorkSpace/KJH/KJH.vcxproj.filters
@@ -23,6 +23,8 @@
     <ClCompile Include="Script\Sound\SoundPlayScene.cpp" />
     <ClCompile Include="Script\Sound\SoundEnd.cpp" />
     <ClCompile Include="Script\giseSlider\GiseGauge.cpp" />
+    <ClCompile Include="Script\Effect\EffectMonoB.cpp" />
+    <ClCompile Include="Script\Effect\Finaleffect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Script\MusicScript.h" />
@@ -46,5 +48,7 @@
     <ClInclude Include="Script\Sound\SoundPlayScene.h" />
     <ClInclude Include="Script\Sound\SoundEnd.h" />
     <ClInclude Include="Script\giseSlider\GiseGauge.h" />
+    <ClInclude Include="Script\Effect\EffectMonoB.h" />
+    <ClInclude Include="Script\Effect\Finaleffect.h" />
   </ItemGroup>
 </Project>
