--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -356,6 +356,7 @@
     <ClInclude Include="Components\Collision\CircleCollider.h" />
     <ClInclude Include="Components\Rendering\ParticleRenderer.h" />
     <ClInclude Include="Components\Rendering\LineRenderer.h" />
+    <ClInclude Include="Scene\LoadingScene.h" />
     <ClInclude Include="Math\EasingFunction.h" />
     <ClInclude Include="Math\GameRandom.h" />
     <ClInclude Include="Components\UI\Slider.h" />
@@ -410,6 +411,7 @@
     <ClInclude Include="Systems\TransformSystem.h" />
     <ClInclude Include="Components\UI\UIComponent.h" />
     <ClInclude Include="Systems\UISystem.h" />
+    <ClInclude Include="Systems\TaskSystem.h" />
     <ClInclude Include="Utils\HCURSORChange.h" />
     <ClInclude Include="Utils\TypeCastUtil.h" />
     <ClInclude Include="Utils\StringConvert.h" />
@@ -445,6 +447,7 @@
     <ClCompile Include="Components\Rendering\ParticleRenderer.cpp" />
     <ClCompile Include="Components\Rendering\LineRenderer.cpp" />
     <ClCompile Include="Datas\SoundDatas.cpp" />
+    <ClCompile Include="Scene\LoadingScene.cpp" />
     <ClCompile Include="Math\EasingFunction.cpp" />
     <ClCompile Include="Math\GameRandom.cpp" />
     <ClCompile Include="Components\UI\Slider.cpp" />
@@ -482,6 +485,7 @@
     <ClCompile Include="Systems\TransformSystem.cpp" />
     <ClCompile Include="Components\UI\UIComponent.cpp" />
     <ClCompile Include="Systems\UISystem.cpp" />
+    <ClCompile Include="Systems\TaskSystem.cpp" />
     <ClCompile Include="Utils\HCURSORChange.cpp" />
     <ClCompile Include="Utils\TypeCastUtil.cpp" />
     <ClCompile Include="Utils\StringConvert.cpp" />
