--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -353,6 +353,7 @@
   <ItemGroup>
     <ClCompile Include="Application\Game.cpp" />
     <ClCompile Include="Application\GameApp.cpp" />
+    <ClCompile Include="Scripts\GameManager.cpp" />
     <ClCompile Include="Objects\Manager\ChargedSlashManager.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\EscMenu\EscContinueButton.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\EscMenu\EscExitButton.cpp" />
@@ -402,6 +403,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
+    <ClInclude Include="Scripts\GameManager.h" />
     <ClInclude Include="Objects\Manager\ChargedSlashManager.h" />
     <ClInclude Include="Objects\Scenes\Stage\EscMenu\EscContinueButton.h" />
     <ClInclude Include="Objects\Scenes\Stage\EscMenu\EscExitButton.h" />
